fix callout overflow problem

--- a/components/pages/posts/[slug]/Content/Callout/Callout.module.scss
+++ b/components/pages/posts/[slug]/Content/Callout/Callout.module.scss
@@ -4,7 +4,7 @@
   @apply border-borderColor-primary border-l-primary bg-surface-primary text-on-surface-primary;
 
   .content {
-    @apply self-center;
+    @apply w-full self-center;
 
     > p {
       @apply m-0;
